--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: '>=2.18.4 <3.0.0'
 
 dependencies:
   flutter:
@@ -40,13 +40,13 @@ flutter:
 
   assets:
     - assets/images/
-    - assets/lang/
+    - assets/fonts/
     - assets/icons/
 
   fonts:
-    - family: Muli
+    - family: OpenSans
       fonts:
-        - asset: assets/fonts/muli/Muli.ttf
-        - asset: assets/fonts/muli/Muli-Light.ttf
-        - asset: assets/fonts/muli/Muli-Italic.ttf
-        - asset: assets/fonts/muli/Muli-Bold.ttf
+        - asset: assets/fonts/OpenSans-Regular.ttf
+        - asset: assets/fonts/OpenSans-Light.ttf
+        - asset: assets/fonts/OpenSans-Medium.ttf
+        - asset: assets/fonts/OpenSans-SemiBold.ttf
